--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@stitches/react": "^1.2.8",
+    "axios": "^1.1.3",
+    "keen-slider": "^6.8.3",
     "next": "13.0.0",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.7",
+    "@types/react": "^18.0.24",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "eslint-config-next": "13.0.0",
+    "typescript": "^4.8.4"
   }
 }
